--- a/app/src/main/res/drawable/into_button_back.xml
+++ b/app/src/main/res/drawable/into_button_back.xml
@@ -4,7 +4,7 @@
         android:radius="7dp"
         />
     <solid
-        android:color="@color/backgroundSplashScreen"
+        android:color="@color/backgroundLogin"
         />
 
 </shape>
