--- a/app/src/main/res/layout/fragment_create_account_bank_info.xml
+++ b/app/src/main/res/layout/fragment_create_account_bank_info.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundLogin"
+    android:background="@color/Background"
     tools:context=".auth.presentation.view.CreateAccountPersonalInfoFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:background="@color/backgroundLogin"
-
+        android:background="@color/Background"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,9 +18,9 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topappbar"
-            android:background="@color/backgroundLogin"
-            app:titleTextColor="@color/colorText"
-            app:navigationIconTint="@color/colorText"
+            android:background="@color/Background"
+            app:titleTextColor="@color/Title"
+            app:navigationIconTint="@color/Title"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:layout_marginTop="@dimen/_15sdp"
@@ -41,7 +40,7 @@
         app:layout_constraintGuide_percent="0.15" />
 
     <TextView
-        android:textColor="@color/colorText"
+        android:textColor="@color/Title"
         android:id="@+id/text_mobile_num"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -66,8 +65,8 @@
 
 
     <EditText
-        android:textColor="@color/colorText"
-        android:textColorHint="@color/colorText4"
+        android:textColor="@color/Title"
+        android:textColorHint="@color/Hint"
         android:id="@+id/Bank_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,8 +77,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/progressBar" />
  <EditText
-     android:textColor="@color/colorText"
-     android:textColorHint="@color/colorText4"
+     android:textColor="@color/Title"
+     android:textColorHint="@color/Hint"
      android:id="@+id/Account_personal_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,9 +89,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Bank_name" />
 <EditText
-    android:textColor="@color/colorText"
-    android:textColorHint="@color/colorText4"
-
+    android:textColor="@color/Title"
+    android:textColorHint="@color/Hint"
     android:id="@+id/Account_number"
         android:inputType="number"
         android:layout_width="match_parent"
@@ -105,9 +103,8 @@
         app:layout_constraintTop_toBottomOf="@+id/Account_personal_name" />
 
 <EditText
-    android:textColor="@color/colorText"
-    android:textColorHint="@color/colorText4"
-
+    android:textColor="@color/Title"
+    android:textColorHint="@color/Hint"
     android:id="@+id/IBAN_number"
         android:inputType="number"
         android:layout_width="match_parent"
@@ -130,15 +127,37 @@
         android:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/IBAN_number"
         tools:layout_editor_absoluteX="19dp" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/skip"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_margin="@dimen/_15sdp"
+        android:background="@drawable/bg_skip"
+        android:gravity="center"
+        android:text="Skip"
+        android:textColor="@color/primary"
+        app:layout_constraintTop_toBottomOf="@+id/submit_and_continue_bank"
+        tools:layout_editor_absoluteX="19dp" />
 
     <TextView
-        android:textColor="@color/colorText"
+        android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/_15sdp"
         android:text="@string/privacy"
-        app:layout_constraintTop_toBottomOf="@+id/submit_and_continue_bank"
+        android:textColor="@color/colorText"
+        app:layout_constraintTop_toBottomOf="@+id/skip"
         tools:layout_editor_absoluteX="19dp" />
+
+    <ProgressBar
+        android:visibility="gone"
+        android:id="@+id/pBankAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
