--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -27,8 +27,8 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="@dimen/_147sdp"
-            android:layout_height="@dimen/_77sdp"
+            android:layout_width="256dp"
+            android:layout_height="168dp"
             android:src="@drawable/intro_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,13 +85,14 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2">
 
                 <com.hbb20.CountryCodePicker
+                    android:clickable="false"
                     android:id="@+id/ccp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="5dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    app:ccp_contentColor="@color/colorText4"
+                    app:ccp_contentColor="@color/Title"
                     app:ccp_showArrow="true"
                     app:ccp_showFlag="true"
                     app:ccp_showNameCode="false"
@@ -105,23 +106,23 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="5dp"
                     android:layout_weight="2"
-                    android:background="@color/backgroundSplashScreen"
+                    android:background="@color/Background"
                     android:hint="@string/_1024952995"
                     android:inputType="phone"
                     android:maxLength="10"
                     android:padding="15dp"
-                    android:textColor="@color/colorText"
-                    android:textColorHint="@color/colorText4" />
+                    android:textColor="@color/Title"
+                    android:textColorHint="@color/Hint" />
 
                 <TextView
                     android:id="@+id/send_code"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@color/backgroundSplashScreen"
+                    android:background="@color/Background"
                     android:gravity="center"
                     android:text="@string/send_code"
-                    android:textColor="#00A6A6" />
+                    android:textColor="@color/primary" />
 
 
             </LinearLayout>
@@ -144,13 +145,13 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:layout_marginStart="16dp"
-                    android:background="@color/backgroundSplashScreen"
+                    android:background="@color/Background"
                     android:hint="Otp Code"
                     android:inputType="phone"
-                    android:maxLength="10"
+                    android:maxLength="4"
                     android:padding="15dp"
-                    android:textColor="@color/colorText"
-                    android:textColorHint="@color/colorText4"
+                    android:textColor="@color/Title"
+                    android:textColorHint="@color/Hint"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:layout_editor_absoluteY="0dp" />
 
@@ -162,7 +163,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="Resend"
-                    android:textColor="@color/colorText4"
+                    android:textColor="@color/Hint"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.937"
