--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,4 +6,19 @@
     <color name="colorText2">#000000</color>
     <color name="colorText3">#00A6A6</color>
     <color name="colorText4">#B2C3C9</color>
+
+    <color name="primary">#00A6A6</color>
+    <color name="secondary">#A6B5C9</color>
+    <color name="Tertiary">#D6E2ED</color>
+    <color name="Quinary">#444548</color>
+    <color name="Hint">#B2C3C9</color>
+    <color name="Background">#1C1C1E</color>
+    <color name="Border">#444548</color>
+    <color name="Title">#FFFFFF</color>
+    <color name="TitleSecondary">#000000</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="success">#3CD29C</color>
+    <color name="progress">#FFB21C</color>
+    <color name="error">#FF2D55</color>
 </resources>
