--- a/app/src/main/res/layout/item_bottom_sheet.xml
+++ b/app/src/main/res/layout/item_bottom_sheet.xml
@@ -6,27 +6,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="@dimen/_20sdp"
+    android:background="@color/Background"
     android:orientation="vertical"
     app:behavior_hideable="false"
-    android:background="@color/Background"
     app:behavior_peekHeight="0dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-    app:layout_constraintHeight_percent="0.80">
-
+    app:layout_constraintHeight_percent="0.70">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.05" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.95" />
-
     <View
         android:id="@+id/drag_handle_view"
         android:layout_width="0dp"
@@ -36,7 +33,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent=".20" />
-
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
@@ -48,7 +44,6 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@id/guide1"
         app:layout_constraintTop_toBottomOf="@+id/drag_handle_view" />
-
     <TextView
         android:id="@+id/textView4"
         android:layout_width="0dp"
@@ -60,7 +55,6 @@
         app:layout_constraintEnd_toEndOf="@id/guide2"
         app:layout_constraintStart_toStartOf="@id/guide1"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay1"
         android:layout_width="@dimen/_140sdp"
@@ -106,7 +100,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/addimage1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay2"
         android:layout_width="@dimen/_140sdp"
@@ -151,7 +144,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/addimage2" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay3"
         style="?attr/bottomSheetStyle"
@@ -198,7 +190,6 @@
             app:layout_constraintLeft_toRightOf="@id/addimage3" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay5"
         style="?attr/bottomSheetStyle"
@@ -244,7 +235,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/addimage5" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay4"
         android:layout_width="@dimen/_140sdp"
@@ -290,7 +280,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/addimage4" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lay6"
         android:layout_width="@dimen/_140sdp"
@@ -337,29 +326,35 @@
             app:layout_constraintLeft_toRightOf="@id/addimage6" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/next2_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/firstbuttonback"
         android:gravity="center"
         android:text="@string/confirm"
         android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="@+id/lay6"
+        app:layout_constraintStart_toStartOf="@+id/lay5"
+        app:layout_constraintTop_toBottomOf="@+id/lay6" />
+
+    <TextView
         app:layout_constraintEnd_toEndOf="@id/guide2"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guide1"
-        app:layout_constraintTop_toBottomOf="@+id/lay6"
-        app:layout_constraintVertical_bias="1.0" />
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/next2_btn" />
 
     <ProgressBar
         android:visibility="gone"
         android:id="@+id/car_images_progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/next2_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lay5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
