--- a/app/src/main/res/layout/fragment_bottom_sheet_finshed_trip.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_finshed_trip.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".BottomSheetFinshedTripFragment"
-android:id="@+id/bottom_sheet_trip_finished"
-app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-android:orientation="vertical"
+    tools:context=".home.presenter.view.BottomSheetFinshedTripFragment"
+    android:id="@+id/bottom_sheet_trip_finished"
+    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+    android:orientation="vertical"
 >
 <com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
