--- a/app/src/main/res/layout/fragment_bottom_sheet_new_trip.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_new_trip.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".BottomSheetNewTripFragment"
+    tools:context=".home.presenter.view.BottomSheetNewTripFragment"
     android:id="@+id/bottom_sheet_new_request_trip"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     android:orientation="vertical"
@@ -228,7 +228,15 @@
                     app:layout_constraintWidth_percent="0.47" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
+            <ProgressBar
+                android:id="@+id/new_request_ProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
