--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -17,35 +17,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".home.MapsFragment" />
-    <com.google.android.material.card.MaterialCardView
-        android:visibility="gone"
-        android:id="@+id/trip_cycle_card"
-        app:strokeWidth="0dp"
-        app:strokeColor="@android:color/transparent"
-        map:cardElevation="0dp"
-        android:layout_width="match_parent"
-        android:background="@android:color/transparent"
-        android:backgroundTint="@android:color/transparent"
-        map:layout_constraintBottom_toBottomOf="parent"
-        map:layout_constraintEnd_toEndOf="parent"
-        map:layout_constraintStart_toStartOf="parent"
-        android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-        >
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_bottom_sheet"
-            android:orientation="vertical"
-            app:behavior_hideable="false"
-            app:behavior_peekHeight="0dp"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:navGraph="@navigation/bottom_nav_gragh"
-            />
-
-    </com.google.android.material.card.MaterialCardView>
+        tools:context=".home.presenter.view.MapsFragment" />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -115,5 +87,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/trip_bottom_sheets"
+        layout="@layout/trip_bottom_sheets">
+    </include>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
