--- a/app/src/main/res/layout/fragment_botttom_sheet_accepted_trip.xml
+++ b/app/src/main/res/layout/fragment_botttom_sheet_accepted_trip.xml
@@ -210,7 +210,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_contact_passenger" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_trip_lifecycle"
+                    android:id="@+id/btn_trip"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_40sdp"
                     android:background="@drawable/into_button_back"
