--- a/app/src/main/res/drawable/into_button_back.xml
+++ b/app/src/main/res/drawable/into_button_back.xml
@@ -4,7 +4,7 @@
         android:radius="10dp"
         />
     <solid
-        android:color="@color/white"
+        android:color="@color/Background"
         />
 
 </shape>
